@@ -1,18 +1,18 @@
-# $NetBSD: Makefile,v 1.10 2018/08/30 12:27:57 wen Exp $
+# $NetBSD: Makefile,v 1.11 2019/07/31 20:39:14 brook Exp $
 
-CATEGORIES=	math
+CATEGORIES=	math R
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	${R_HOMEPAGE_BASE}/xts/
-COMMENT=	R's eXtensible Time Series
-LICENSE=	gnu-gpl-v2
+COMMENT=	eXtensible Time Series
+LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
 
 R_PKGNAME=	xts
-R_PKGVER=	0.11-0
-
-USE_LANGUAGES+=	c fortran
+R_PKGVER=	0.11-2
 
 DEPENDS+=	R-zoo>=1.7.12:../../math/R-zoo
+
+USE_LANGUAGES+=	c fortran
 
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
