@@ -1,11 +1,11 @@
-# $NetBSD: buildlink3.mk,v 1.1 2018/02/03 01:33:28 minskim Exp $
+# $NetBSD: buildlink3.mk,v 1.2 2019/07/31 20:39:14 brook Exp $
 
 BUILDLINK_TREE+=	R-xts
 
 .if !defined(R_XTS_BUILDLINK3_MK)
 R_XTS_BUILDLINK3_MK:=
 
-BUILDLINK_API_DEPENDS.R-xts+=	R-xts>=0.10.1
+BUILDLINK_API_DEPENDS.R-xts+=	R-xts>=0.11.2
 BUILDLINK_PKGSRCDIR.R-xts?=	../../math/R-xts
 .endif	# R_XTS_BUILDLINK3_MK
 
